--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root" class="d-flex flex-column"></div>
+  <div id="root" class="d-flex flex-column mt-5"></div>
 </body>
 
 </html>
