--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,9 @@
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root" class="d-flex flex-column pt-5 container"></div>
+  <div class="app-wrapper">
+    <div id="root" class="d-flex flex-column pt-5 container"></div>
+  </div>
 </body>
 
 </html>
